fixed alignment issues and styled button

--- a/style.css
+++ b/style.css
@@ -3,15 +3,17 @@
 * {
     margin: 0;
     padding: 0;
-    outline: 2px solid red;
+    /* outline: 2px solid red; */
 }
 
 body {
+    
     font-family: "Roboto", sans-serif;
     font-weight: 400;
 }
 
 .section-one {
+    
     background-color: #1F2937;
 }
 
@@ -25,7 +27,7 @@ body {
     
 }
 
-.navlinks, #sub-text {
+.navlinks {
     text-decoration: none;
     font-size: 18px;
     color: #E5E7EB;
@@ -45,14 +47,48 @@ body {
     color: #F9FAF8;
 }
 
-.content {
-    display: flex;
-    flex-direction: row;
+#sub-text {
+    text-decoration: none;
+    font-size: 18px;
+    color: #E5E7EB;
+    /* margin-left: 120px; */
 }
 
-.content-left, .content-right {
+.content {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: row;
+    margin: 50px;
+}
+
+.content-left {
+    display: flex;
+    justify-content: center;
+    /* align-items: center; */
+    flex-direction: column;
+    width: 50%;
+    margin-left: 200px;
+}
+
+.content-right {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    width: 50%;   
+}
+
+img {
+    margin-bottom: 50px;
+}
+
+#signup-button {
+    color: white;
+    background-color: #3882F6;
+    width: 100px;
+    height: 30px;
+    border: 1px solid #3882F6;
+    border-radius: 5px;
+    cursor: pointer;
 }
